--- a/jay_pyspark_display.ipynb
+++ b/jay_pyspark_display.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "bf0f8120",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0f57828d",
    "metadata": {},
    "outputs": [
@@ -110,17 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a5d4900c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession"
+    "from pyspark.sql import SparkSession\n",
+    "import findspark\n",
+    "\n",
+    "findspark.init()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "30a792db",
    "metadata": {},
    "outputs": [
@@ -128,11 +131,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/11/19 11:42:53 WARN Utils: Your hostname, shubhams-mac.local resolves to a loopback address: 127.0.0.1; using 192.168.1.18 instead (on interface en0)\n",
-      "24/11/19 11:42:53 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/02/20 17:32:06 WARN Utils: Your hostname, shubhams-mac.local resolves to a loopback address: 127.0.0.1; using 192.168.1.208 instead (on interface en0)\n",
+      "25/02/20 17:32:06 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/11/19 11:42:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/02/20 17:32:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -156,7 +159,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.18:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.208:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -172,7 +175,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f79f96c2550>"
+       "<pyspark.sql.session.SparkSession at 0x7f996016cd00>"
       ]
      },
      "execution_count": 3,
@@ -189,22 +192,14 @@
    "execution_count": 7,
    "id": "a2216dd3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = spark.read.csv('/Users/thispc/Desktop/Machine-learning/Sales copy.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "24198bd0",
    "metadata": {},
    "outputs": [
@@ -343,8 +338,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2bd19369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 5:>                                                          (0 + 1) / 1]\r",
+      "\r",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------+---+\n",
+      "| ID|   Name|Age|\n",
+      "+---+-------+---+\n",
+      "|  1|  Alice| 30|\n",
+      "|  2|    Bob| 25|\n",
+      "|  3|Charlie| 35|\n",
+      "+---+-------+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [(1, \"Alice\", 30),\n",
+    "        (2, \"Bob\", 25),\n",
+    "        (3, \"Charlie\", 35)]\n",
+    "\n",
+    "# Define column names\n",
+    "columns = [\"ID\", \"Name\", \"Age\"]\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = spark.createDataFrame(data, columns)\n",
+    "\n",
+    "# Show the DataFrame\n",
+    "df.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "82c9325b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting findspark\n",
+      "  Using cached findspark-2.0.1-py2.py3-none-any.whl.metadata (352 bytes)\n",
+      "Using cached findspark-2.0.1-py2.py3-none-any.whl (4.4 kB)\n",
+      "Installing collected packages: findspark\n",
+      "Successfully installed findspark-2.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install findspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c3236b4",
    "metadata": {},
    "outputs": [],
    "source": []
